--- a/blat02/CodeBlatt2.html
+++ b/blat02/CodeBlatt2.html
@@ -165,7 +165,7 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 		for( var i = -1; i < 1; i += 0.1 ) {
 			for(var j = -1; j < 1; j += 0.1 ) {
 				for(var k = -1; k < 1; k += 0.1 ) {
-					var newPoint = new Point3D( j, i, k, 1);
+					var newPoint = new Point3D( j*i, i*i, k*i, 1);
 					pointarray.push( newPoint );
 				}
 			}
