--- a/blat03/CodeBlatt3.html
+++ b/blat03/CodeBlatt3.html
@@ -163,9 +163,16 @@ Sortiere Dreiecke: <input type="checkbox" id="striangles" value="c" onclick="sor
 
     // Create array of Lines
     var linearray = [];
-    function createLines () {
+        function createLines () {
 // BEGIN AUFGABE a TEIL 1
-     
+            for( var i = 0; i < 400; i += 20 ) {
+                for( var j = 0; j < 400; j += 20 ) {
+                    var start = new Point3D( -200, j - 200, i - 200, 1 );
+                    var end = new Point3D( 200, j - 200, i - 200, 1 );
+                    var myLine = new Line3D( start, end );
+                    linearray.push(myLine);
+                }
+            }
 // END AUFGABE a TEIL 1
     }
 
@@ -217,6 +224,16 @@ Sortiere Dreiecke: <input type="checkbox" id="striangles" value="c" onclick="sor
         drawPoint(endpoint.x, endpoint.y);
 // END TESTCODE
 // BEGIN AUFGABE a TEIL 2
+        // We will get the a from the f(x) = ax + b
+        var steigung = ((endpoint.y - startpoint.y) / (endpoint.x - startpoint.x) );
+        var beginX = min( startpoint.x, endpoint.x );
+        var endX = max( startpoint.x, endpoint.x );
+        var beginY = min( startpoint.y, endpoint.y );
+        var endY = max( startpoint.y, endpoint.y );
+        if( steigung < 1.0 && steigung > -1.0 ) {
+
+        }
+
        
 // END AUFGABE a TEIL 2
     }
